# Templates

C/NcursesTemplate/: CMakeLists.txt  main.c
C/SDL3CmakeTemplate/: CMakeLists.txt  Template.c
C/SDL3TemplateWIN/: CMakeLists.txt  Template.cpp
CPP/CMakeOpenGL21Template/: CMakeLists.txt
CPP/CMakeOpenGL21Template/.cache/clangd/index/: gl.c.B58A3B6B4F2CDDAB.idx  gl.h.413C208633F69151.idx  glad.h.02546BDFEA1DBAFD.idx  glx.c.83772AF6C6D3B468.idx  glx.h.49570A18D8C98FD7.idx  khrplatform.h.5AB60912D4CFB96F.idx  main.cpp.350BC76D85ACAEF8.idx
CPP/CMakeOpenGL21Template/Libraries/include/glad/: egl.h  gl.h  gles1.h  gles2.h  glx.h
CPP/CMakeOpenGL21Template/Libraries/src/: gl.c  gles2.c
CPP/CMakeOpenGL21Template/src/: main.cpp
CPP/CmakeOlcPGETemplate/: CMakeLists.txt
CPP/CmakeOlcPGETemplate/src/: main.cpp
CPP/SDL2Template/: CMakeLists.txt  main.cpp
RUST/SDL2Rust/: Cargo.toml
RUST/SDL2Rust/.cargo/: config.toml
RUST/SDL2Rust/src/: main.rs
